crates/iroha_telemetry_derive/tests/ui_fail/bare_spec.stderr
error: expected literal
 --> tests/ui_fail/bare_spec.rs:3:11
  |
3 | #[metrics(test_query, "another_test_query_without_timing")]
  |           ^^^^^^^^^^
